--- a/app/src/main/res/layout/first_list_item.xml
+++ b/app/src/main/res/layout/first_list_item.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_height="wrap_content"
     android:layout_width="match_parent">
-</TextView>
+    <TextView
+        android:id="@+id/tv1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"/>
+    <TextView
+        android:id="@+id/tv2"
+        android:layout_width="match_parent"
+        android:layout_below="@id/tv1"
+        android:layout_height="wrap_content" />
+</LinearLayout>
