--- a/app/src/main/res/layout/first_list_item.xml
+++ b/app/src/main/res/layout/first_list_item.xml
@@ -5,12 +5,18 @@
     android:layout_width="match_parent">
     <TextView
         android:id="@+id/tv1"
+        android:textColor="#000000"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"/>
+        android:textSize="18sp"/>
     <TextView
         android:id="@+id/tv2"
         android:layout_width="match_parent"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="12dp"
         android:layout_below="@id/tv1"
         android:layout_height="wrap_content" />
+
 </LinearLayout>
