--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,16 +51,12 @@
                 android:id="@+id/textView1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:onClick="onTvClick"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:onClick="onTvClick"
                 android:textSize="35sp" />
 
         </LinearLayout>
@@ -74,152 +70,120 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+       <TableLayout
+           android:layout_marginStart="5dp"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TableRow>
+               <Button
+                   android:id="@+id/b7"
+                   style="@android:style/Widget.Material.Button"
+                   android:layout_width="wrap_content"
+                   android:layout_height="95dp"
+                   android:onClick="onClick"
+                   android:text="7"
+                   android:textSize="26sp" />
 
-            <Button
-                android:id="@+id/b7"
-                style="@android:style/Widget.Material.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="7"
-                android:textSize="26sp" />
+               <Button
+                   android:id="@+id/b8"
+                   style="@android:style/Widget.Button.Inset"
+                   android:layout_width="wrap_content"
+                   android:layout_height="95dp"
+                   android:onClick="onClick"
+                   android:text="8"
+                   android:textSize="26sp" />
 
-            <Button
-                android:id="@+id/b8"
-                style="@android:style/Widget.Button.Inset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="8"
-                android:textSize="26sp" />
+               <Button
+                   android:id="@+id/b9"
+                   style="@android:style/Widget.Button.Inset"
+                   android:layout_width="wrap_content"
+                   android:layout_height="95dp"
+                   android:onClick="onClick"
+                   android:text="9"
+                   android:textSize="26sp" />
+               <Button
+                   android:id="@+id/b_del"
+                   style="@android:style/Widget.Button.Inset"
+                   android:layout_width="wrap_content"
+                   android:layout_height="95dp"
+                   android:onClick="onClick"
+                   android:text="С"
+                   android:textSize="26sp" />
+           </TableRow>
+           <TableRow>
+               <Button
+                   android:id="@+id/b4"
+                   style="@android:style/Widget.Button.Inset"
+                   android:layout_width="wrap_content"
+                   android:layout_height="95dp"
+                   android:onClick="onClick"
+                   android:text="4"
+                   android:textSize="26sp" />
 
-            <Button
-                android:id="@+id/b9"
-                style="@android:style/Widget.Button.Inset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="9"
-                android:textSize="26sp" />
-        </LinearLayout>
+               <Button
+                   android:id="@+id/b5"
+                   style="@android:style/Widget.Button.Inset"
+                   android:layout_width="wrap_content"
+                   android:layout_height="95dp"
+                   android:onClick="onClick"
+                   android:text="5"
+                   android:textSize="26sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+               <Button
+                   android:id="@+id/b6"
+                   style="@android:style/Widget.Button.Inset"
+                   android:layout_width="wrap_content"
+                   android:layout_height="95dp"
+                   android:onClick="onClick"
+                   android:text="6"
+                   android:textSize="26sp" />
 
-            <Button
-                android:id="@+id/b4"
-                style="@android:style/Widget.Button.Inset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="4"
-                android:textSize="26sp" />
+               <Button
+                   android:id="@+id/b_point"
+                   style="@android:style/Widget.Button.Inset"
+                   android:layout_width="wrap_content"
+                   android:layout_height="95dp"
+                   android:onClick="onClick"
+                   android:text=","
+                   android:textSize="26sp" />
+           </TableRow>
+           <TableRow>
+               <Button
+                   android:id="@+id/b1"
+                   style="@android:style/Widget.Button.Inset"
+                   android:layout_width="wrap_content"
+                   android:layout_height="95dp"
+                   android:onClick="onClick"
+                   android:text="1"
+                   android:textSize="26sp" />
 
-            <Button
-                android:id="@+id/b5"
-                style="@android:style/Widget.Button.Inset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="5"
-                android:textSize="26sp" />
+               <Button
+                   android:id="@+id/b2"
+                   style="@android:style/Widget.Button.Inset"
+                   android:layout_width="wrap_content"
+                   android:layout_height="95dp"
+                   android:onClick="onClick"
+                   android:text="2"
+                   android:textSize="26sp" />
 
-            <Button
-                android:id="@+id/b6"
-                style="@android:style/Widget.Button.Inset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="6"
-                android:textSize="26sp" />
-        </LinearLayout>
+               <Button
+                   android:id="@+id/b3"
+                   style="@android:style/Widget.Button.Inset"
+                   android:layout_width="wrap_content"
+                   android:layout_height="95dp"
+                   android:onClick="onClick"
+                   android:text="3"
+                   android:textSize="26sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+               <Button
+                   android:id="@+id/b0"
+                   style="@android:style/Widget.Button.Inset"
+                   android:layout_width="wrap_content"
+                   android:layout_height="95dp"
+                   android:text="0"
+                   android:textSize="26sp" />
 
-            <Button
-                android:id="@+id/b1"
-                style="@android:style/Widget.Button.Inset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="1"
-                android:textSize="26sp" />
-
-            <Button
-                android:id="@+id/b2"
-                style="@android:style/Widget.Button.Inset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="2"
-                android:textSize="26sp" />
-
-            <Button
-                android:id="@+id/b3"
-                style="@android:style/Widget.Button.Inset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="3"
-                android:textSize="26sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/b0"
-                style="@android:style/Widget.Button.Inset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="0"
-                android:textSize="26sp" />
-
-            <Button
-                android:id="@+id/b_point"
-                style="@android:style/Widget.Button.Inset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text=","
-                android:textSize="26sp" />
-
-            <Button
-                android:id="@+id/b_del"
-                style="@android:style/Widget.Button.Inset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="С"
-                android:textSize="26sp" />
-        </LinearLayout>
+           </TableRow>
+       </TableLayout>
     </LinearLayout>
 </LinearLayout>
