--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
+    android:id="@+id/linear1"
     android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="35sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,28 +27,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="#A39999">
+            android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button"
-                style="@android:style/Widget.Button.Inset"
+                android:id="@+id/button1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="onClick1"
-                android:textSize="20sp"
-                android:text="Метры" />
+                android:textSize="17sp"
+                android:text="@string/meters" />
+
 
             <Button
                 android:id="@+id/button2"
-                style="@android:style/Widget.Button.Inset"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="17sp"
                 android:layout_weight="1"
                 android:onClick="onClick2"
-                android:text="Метры" />
+                android:text="@string/meters" />
 
         </LinearLayout>
 
@@ -47,14 +55,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/textView2"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="35sp" />
@@ -65,7 +71,7 @@
 
 
     <LinearLayout
-
+        android:id="@+id/linear2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -77,7 +83,6 @@
            <TableRow>
                <Button
                    android:id="@+id/b7"
-                   style="@android:style/Widget.Material.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    android:onClick="onClick"
@@ -86,7 +91,6 @@
 
                <Button
                    android:id="@+id/b8"
-                   style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    android:onClick="onClick"
@@ -95,7 +99,6 @@
 
                <Button
                    android:id="@+id/b9"
-                   style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    android:onClick="onClick"
@@ -103,17 +106,15 @@
                    android:textSize="26sp" />
                <Button
                    android:id="@+id/b_del"
-                   style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    android:onClick="onClick"
-                   android:text="С"
+                   android:text="DEL"
                    android:textSize="26sp" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/b4"
-                   style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    android:onClick="onClick"
@@ -122,7 +123,6 @@
 
                <Button
                    android:id="@+id/b5"
-                   style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    android:onClick="onClick"
@@ -131,7 +131,6 @@
 
                <Button
                    android:id="@+id/b6"
-                   style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    android:onClick="onClick"
@@ -140,7 +139,6 @@
 
                <Button
                    android:id="@+id/b_point"
-                   style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    android:onClick="onClick"
@@ -150,7 +148,6 @@
            <TableRow>
                <Button
                    android:id="@+id/b1"
-                   style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    android:onClick="onClick"
@@ -159,7 +156,6 @@
 
                <Button
                    android:id="@+id/b2"
-                   style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    android:onClick="onClick"
@@ -168,7 +164,6 @@
 
                <Button
                    android:id="@+id/b3"
-                   style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    android:onClick="onClick"
@@ -177,9 +172,9 @@
 
                <Button
                    android:id="@+id/b0"
-                   style="@android:style/Widget.Button.Inset"
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
+                   android:onClick="onClick"
                    android:text="0"
                    android:textSize="26sp" />
 
