--- a/app/src/main/res/menu/second_menu.xml
+++ b/app/src/main/res/menu/second_menu.xml
@@ -4,51 +4,51 @@
     <group android:id="@+id/menugroupid">
 
         <item
-            android:title="Нанометры"
+            android:title="@string/nanometers"
             android:id="@+id/menu1" />
 
         <item
-            android:title="Микрометры"
+            android:title="@string/micrometers"
             android:id="@+id/menu2" />
 
         <item
-            android:title="Миллиметры"
+            android:title="@string/millimeters"
             android:id="@+id/menu3" />
 
         <item
-            android:title="Сантиметры"
+            android:title="@string/centimeters"
             android:id="@+id/menu4" />
 
         <item
-            android:title="Дециметры"
+            android:title="@string/decimeters"
             android:id="@+id/menu5" />
 
         <item
-            android:title="Метры"
+            android:title="@string/meters"
             android:id="@+id/menu6" />
 
         <item
-            android:title="Километры"
+            android:title="@string/kilometers"
             android:id="@+id/menu7" />
 
         <item
-            android:title="Дюймы"
+            android:title="@string/inches"
             android:id="@+id/menu8" />
 
         <item
-            android:title="Футы"
+            android:title="@string/foots"
             android:id="@+id/menu9" />
 
         <item
-            android:title="Ярды"
+            android:title="@string/yards"
             android:id="@+id/menu10" />
 
         <item
-            android:title="Мили"
+            android:title="@string/miles"
             android:id="@+id/menu11" />
 
         <item
-            android:title="Морские мили"
+            android:title="@string/seamiles"
             android:id="@+id/menu12" />
 
     </group>
