--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#A39999</color>
     <color name="colorPrimaryDark">#707070</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="blue">#10C1C1</color>
+    <color name="gray">#A39999</color>
+    <color name="Dark_white">#F1F2ED</color>
+    <color name="white">#FFFFFF</color>
+    <color name="orange">#F9A115</color>
+    <color name="dark">#363535</color>
+    <color name="black">#000000</color>
+    <color name="green">#2D9C02</color>
 </resources>
